GNOME Bugzilla – Bug 701043
Fix crash on realm discovery
Last modified: 2013-05-26 18:45:23 UTC
gnome-initial-setup crashes when discoverying a domain it doesn't know about already.
Created attachment 245324 [details] [review] account: Fix crash on realm discovery
Review of attachment 245324 [details] [review]: Nice catch.
Attachment 245324 [details] pushed as 72264be - account: Fix crash on realm discovery