account: Fix crash on realm discovery

https://bugzilla.gnome.org/show_bug.cgi?id=701043